<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground">

    <TextView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedtextview"/>
    <TextView
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/event_name"
        android:background="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/eventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:hint="@string/date"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventName" />

    <TextView
        android:id="@+id/eventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "10dp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/event_location"
        android:background="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDate" />


    <TextView
        android:id="@+id/eventDesc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/description"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventLocation"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_marginVertical="10dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDesc">

        <ImageView
            android:id="@+id/ProfileBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/dpp"
            android:clickable="true"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ownerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/cardViewImg"
        app:layout_constraintStart_toStartOf="@id/cardViewImg"
        app:layout_constraintTop_toBottomOf="@id/cardViewImg"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/beThere"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownerName"/>



</androidx.constraintlayout.widget.ConstraintLayout>