<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedtextview"
        android:gravity="center"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <ImageView
        android:id="@+id/profPic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/nickname"
        android:labelFor="@id/profPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/nickname"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/profPic"
        app:layout_constraintTop_toBottomOf="@+id/profPic"
        app:layout_constraintStart_toStartOf="@id/profPic" />


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:layout_editor_absoluteY="426dp" />

    <Switch
        android:id="@+id/bffSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@id/textView" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/profPic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/rating"
        app:layout_constraintEnd_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/rating">

    <TextView
        android:id="@+id/reviewers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/reviewer"
        android:layout_marginTop="33dp"
      />

    </LinearLayout>


    <TextView
        android:id="@+id/bffSwitchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_friends"
        android:textSize="13sp"
        android:labelFor="@+id/bffSwitch"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/bffSwitch"
        app:layout_constraintEnd_toEndOf="@+id/bffSwitch"
        app:layout_constraintStart_toStartOf="@+id/bffSwitch"/>





</androidx.constraintlayout.widget.ConstraintLayout>